@@ -28,7 +28,7 @@ public class MemberView {
             String menu = sc.nextLine();
             switch (menu){
                 case "1" :
-                    test(member); //todo
+                    FlightSearchMenuView.search(member);
                     break;
                 case "2" :
                     member = updatePassword(member);
@@ -177,7 +177,7 @@ public class MemberView {
 
     public List<Reservation> reservationDetailView(Member member, Reservation reservation, List<Reservation> list){
         List<Ticket> tickets = reservationController.viewMemberTicket(reservation.getReservationId());
-        Ticket ticket = tickets.getFirst();
+        Ticket ticket = tickets.get(0);
         Flight flight = FlightController.searchOneFlight(ticket.getFlightId());
         System.out.println("예매번호 : " + reservation.getReservationId());
         System.out.println("예매시간 : " + reservation.getCreatedAt());
@@ -229,16 +229,7 @@ public class MemberView {
 
 
 
-    public void test(Member member){
-        Flight flight = new Flight();
-        flight.setFlight_id(1);
-        flight.setPrice(90600);
-        List<Ticket> list = new ArrayList<>();
-        for(int i=1; i<=2; i++){
-            list.add(new Ticket(i+"", "test"+i, "123-1234-1234", "125873"));
-        }
-        reservationController.makeReservation(member, flight, list);
-    }
+
     public void testCancle(Member member){
         Reservation reservation = new Reservation();
         reservation.setReservationId(8);
